--- a/Portfolio/02/DevFolio/index.html
+++ b/Portfolio/02/DevFolio/index.html
@@ -86,7 +86,7 @@
       <img src="assets/img/hero-img.jpg" alt="" data-aos="fade-in">
 
       <div class="container d-flex flex-column align-items-center justify-content-center text-center" data-aos="fade-up" data-aos-delay="100">
-        <h2>I am Morgan Freeman</h2>
+        <h2>I am Govind Kumawat</h2>
         <p><span class="typed" data-typed-items="Designer, Developer, Freelancer, Photographer"></span></p>
       </div>
 
@@ -102,13 +102,13 @@
 
             <div class="row justify-content-between gy-4">
               <div class="col-lg-5">
-                <img src="assets/img/profile-img.jpg" class="img-fluid" alt="">
+                <img src="assets/img/profile-img.png" class="img-fluid" alt="">
               </div>
               <div class="col-lg-7 about-info">
-                <p><strong>Name: </strong> <span>Morgan Freeman</span></p>
-                <p><strong>Profile: </strong> <span>full stack developer</span></p>
-                <p><strong>Email: </strong> <span>contact@example.com</span></p>
-                <p><strong>Phone: </strong> <span>(617) 557-0089</span></p>
+                <p><strong>Name: </strong> <span>Govind Kumawat</span></p>
+                <p><strong>Profile: </strong> <span>Data Scientist</span></p>
+                <p><strong>Email: </strong> <span>kumawatritik54@gmail.com</span></p>
+                <p><strong>Phone: </strong> <span>9166780327</span></p>
               </div>
 
             </div>
@@ -118,21 +118,21 @@
               <h5>Skills</h5>
 
               <div class="progress">
-                <span class="skill"><span>HTML</span> <i class="val">100%</i></span>
+                <span class="skill"><span>Pyton </span> <i class="val">100%</i></span>
                 <div class="progress-bar-wrap">
                   <div class="progress-bar" role="progressbar" aria-valuenow="100" aria-valuemin="0" aria-valuemax="100"></div>
                 </div>
               </div><!-- End Skills Item -->
 
               <div class="progress">
-                <span class="skill"><span>CSS</span> <i class="val">90%</i></span>
+                <span class="skill"><span>HTML</span> <i class="val">90%</i></span>
                 <div class="progress-bar-wrap">
                   <div class="progress-bar" role="progressbar" aria-valuenow="90" aria-valuemin="0" aria-valuemax="100"></div>
                 </div>
               </div><!-- End Skills Item -->
 
               <div class="progress">
-                <span class="skill"><span>JavaScript</span> <i class="val">75%</i></span>
+                <span class="skill"><span>CSS</span> <i class="val">75%</i></span>
                 <div class="progress-bar-wrap">
                   <div class="progress-bar" role="progressbar" aria-valuenow="75" aria-valuemin="0" aria-valuemax="100"></div>
                 </div>
@@ -152,20 +152,14 @@
             <div class="about-me">
               <h4>About me</h4>
               <p>
-                Curabitur non nulla sit amet nisl tempus convallis quis ac lectus. Curabitur arcu erat, accumsan id
-                imperdiet et, porttitor
-                at sem. Praesent sapien massa, convallis a pellentesque nec, egestas non nisi. Nulla
-                porttitor accumsan tincidunt.
+                Govind Holds an experience of 2+ years and is highly expert in the field of data science, possessing a wealth of knowledge and experience in data analysis, machine learning, and statistical modeling. With a keen understanding of industry trends and a passion for teaching, our Data Science Instructor is at the forefront of empowering the students with the tools and knowledge needed to excel in this rapidly evolving field.
+                
               </p>
               <p>
-                Mauris blandit aliquet elit, eget tincidunt nibh pulvinar a. Vivamus suscipit tortor eget felis
-                porttitor volutpat. Vestibulum
-                ac diam sit amet quam vehicula elementum sed sit amet dui. porttitor at sem.
+                His Key expertise are - Python, Artificial Intelligence, Machine Learning, Deep Learning, Natural language Programing, Computer Vision , SQL, Generative AI , LLM , Mlops , Cloud and NOSQL
               </p>
               <p>
-                Nulla porttitor accumsan tincidunt. Quisque velit nisi, pretium ut lacinia in, elementum id enim.
-                Nulla porttitor accumsan
-                tincidunt. Mauris blandit aliquet elit, eget tincidunt nibh pulvinar a.
+                
               </p>
             </div>
           </div>
