--- a/Portfolio/02/DevFolio/index.html
+++ b/Portfolio/02/DevFolio/index.html
@@ -83,7 +83,7 @@
     <!-- Hero Section -->
     <section id="hero" class="hero section">
 
-      <img src="assets/img/hero-img.jpg" alt="" data-aos="fade-in">
+      <img src="assets/img/hero-img .jpg" alt="" data-aos="fade-in">
 
       <div class="container d-flex flex-column align-items-center justify-content-center text-center" data-aos="fade-up" data-aos-delay="100">
         <h2>I am Govind Kumawat</h2>
@@ -118,7 +118,7 @@
               <h5>Skills</h5>
 
               <div class="progress">
-                <span class="skill"><span>Pyton </span> <i class="val">100%</i></span>
+                <span class="skill"><span>Python </span> <i class="val">100%</i></span>
                 <div class="progress-bar-wrap">
                   <div class="progress-bar" role="progressbar" aria-valuenow="100" aria-valuemin="0" aria-valuemax="100"></div>
                 </div>
