--- a/Portfolio/02/DevFolio/index.html
+++ b/Portfolio/02/DevFolio/index.html
@@ -800,7 +800,7 @@
       <!-- Section Title -->
       <div class="container section-title" data-aos="fade-up">
         <h2>Contact</h2>
-        <p>Necessitatibus eius consequatur ex aliquid fuga eum quidem sint consectetur velit</p>
+        <p></p>
       </div><!-- End Section Title -->
 
       <div class="container" data-aos="fade-up" data-aos-delay="100">
@@ -813,7 +813,7 @@
                 <i class="bi bi-geo-alt flex-shrink-0"></i>
                 <div>
                   <h3>Address</h3>
-                  <p>A108 Adam Street, New York, NY 535022</p>
+                  <p>Pratap nagar ,jaipur ,rajasthan,302028</p>
                 </div>
               </div>
             </div><!-- End Info Item -->
@@ -823,7 +823,7 @@
                 <i class="bi bi-telephone flex-shrink-0"></i>
                 <div>
                   <h3>Phone</h3>
-                  <p>+1 5589 55488 55</p>
+                  <p>9166780327</p>
                 </div>
               </div>
             </div><!-- End Info Item -->
@@ -833,7 +833,7 @@
                 <i class="bi bi-envelope flex-shrink-0"></i>
                 <div>
                   <h3>Email<br></h3>
-                  <p>info@example.com</p>
+                  <p>kumawatritik54@gmail.com</p>
                 </div>
               </div>
             </div><!-- End Info Item -->
