--- a/Portfolio/02/DevFolio/index.html
+++ b/Portfolio/02/DevFolio/index.html
@@ -245,7 +245,7 @@
             </div><!-- Edn Resume Item -->
 
             <div class="resume-item">
-              <h4>Graphic design specialist</h4>
+              <h4>Data Scientist</h4>
               <h5>2017 - 2018</h5>
               <p><em>Stepping Stone Advertising, New York, NY</em></p>
               <ul>
