--- a/Portfolio/02/DevFolio/index.html
+++ b/Portfolio/02/DevFolio/index.html
@@ -201,58 +201,66 @@
         <div class="row">
 
           <div class="col-lg-6" data-aos="fade-up" data-aos-delay="100">
-            <h3 class="resume-title">Sumary</h3>
+            <h3 class="resume-title">OBJECTIVE</h3>
 
             <div class="resume-item pb-0">
-              <h4>Brandon Johnson</h4>
-              <p><em>Innovative and deadline-driven Graphic Designer with 3+ years of experience designing and developing user-centered digital/print marketing material from initial concept to final, polished deliverable.</em></p>
+              <h4></h4>
+              <p><em>IAs a driven Computer Science and Engineering student specializing in Artificial Intelligence and Machine Learning, I bring a robust foundation in Data Structures and Algorithms. My objective is to leverage advanced AI and ML skills to address intricate challenges and deliver impactful solutions within a forward-thinking organization. Committed to continuous learning and growth, I aim to contribute significantly to the field of AI and ML while driving innovation and progress in the industry.</em></p>
               <ul>
-                <li>Portland par 127,Orlando, FL</li>
-                <li>(123) 456-7891</li>
-                <li>alice.barkley@example.com</li>
+                <li>jaipur,rajasthan,302028</li>
+                <li>9166780327</li>
+                <li>kumawatritik54@gmail.com</li>
               </ul>
             </div><!-- Edn Resume Item -->
 
-            <h3 class="resume-title">Education</h3>
+            <h3 class="resume-title">PROFESSIONAL EXPERIENCE</h3>
             <div class="resume-item">
-              <h4>Master of Fine Arts &amp; Graphic Design</h4>
-              <h5>2015 - 2016</h5>
-              <p><em>Rochester Institute of Technology, Rochester, NY</em></p>
-              <p>Qui deserunt veniam. Et sed aliquam labore tempore sed quisquam iusto autem sit. Ea vero voluptatum qui ut dignissimos deleniti nerada porti sand markend</p>
+              <h4>AIML &amp; Machine Learning - Intern, Machine Learning and Analytics</h4>
+              <h5>September 2023- October 2023</h5>
+              <p><em>jaipur,rajasthan,302028</em></p>
+              <p>Project Title: House price prediction, wine Quality decation, iris Classifaction</p>
+              <li>Integrated house price prediction, wine quality detection, and iris classification into a multifaceted project</li>
+              <li>Leveraged diverse datasets and machine learning algorithms for predictive insights across domains.</li>
+              <li>Employed advanced regression techniques and classification models in Python using NumPy, Pandas, and
+                Sci-kit Learn, empowering decision-makers with actionable insights for informed choices.</li>
             </div><!-- Edn Resume Item -->
 
             <div class="resume-item">
-              <h4>Bachelor of Fine Arts &amp; Graphic Design</h4>
-              <h5>2010 - 2014</h5>
-              <p><em>Rochester Institute of Technology, Rochester, NY</em></p>
-              <p>Quia nobis sequi est occaecati aut. Repudiandae et iusto quae reiciendis et quis Eius vel ratione eius unde vitae rerum voluptates asperiores voluptatem Earum molestiae consequatur neque etlon sader mart dila</p>
+              <h4>Data Scientist &amp; Graphic Design</h4>
+              <h5>pursing</h5>
+              <p>Project Title: House price prediction, wine Quality decation, iris Classifaction</p>
+              <li>Integrated house price prediction, wine quality detection, and iris classification into a multifaceted project</li>
+              <li>Leveraged diverse datasets and machine learning algorithms for predictive insights across domains.</li>
+              <li>Employed advanced regression techniques and classification models in Python using NumPy, Pandas, and
+                Sci-kit Learn, empowering decision-makers with actionable insights for informed choices.</li>
             </div><!-- Edn Resume Item -->
 
           </div>
 
           <div class="col-lg-6" data-aos="fade-up" data-aos-delay="200">
-            <h3 class="resume-title">Professional Experience</h3>
+            <h3 class="resume-title">SKILLS</h3>
             <div class="resume-item">
-              <h4>Senior graphic design specialist</h4>
-              <h5>2019 - Present</h5>
-              <p><em>Experion, New York, NY </em></p>
-              <ul>
-                <li>Lead in the design, development, and implementation of the graphic, layout, and production communication materials</li>
-                <li>Delegate tasks to the 7 members of the design team and provide counsel on all aspects of the project. </li>
-                <li>Supervise the assessment of all graphic materials in order to ensure quality and accuracy of the design</li>
-                <li>Oversee the efficient use of production project budgets ranging from $2,000 - $25,000</li>
+              <li>Programming Languages: Python, SQL, Basic Java, C, C++ </li>
+              <li>Machine Learning Algorithms: Classification, Regression, Clustering</li>
+              <li>Python Libraries: NumPy, Pandas, Matplotlib, Plotly, Seaborn, TensorFlow, PyTorch,</li>
+              <li>Database: MongoDB</li>
+              <li>Data Analysis Tools: Power BI, Tableau,</li>
+              <li>AI Tools: Chat-GPT, Bard AI, Github Copilot,Groq</li>
+              <li>Adobe Photoshop </li>
+              <li>Photography</li>
+              <li>IOT & Embedded system</li>
               </ul>
             </div><!-- Edn Resume Item -->
 
             <div class="resume-item">
-              <h4>Data Scientist</h4>
-              <h5>2017 - 2018</h5>
-              <p><em>Stepping Stone Advertising, New York, NY</em></p>
+              <h4>CERTIFICATIONS</h4>
+              <h5></h5>
+              <p><em></em></p>
               <ul>
-                <li>Developed numerous marketing programs (logos, brochures,infographics, presentations, and advertisements).</li>
-                <li>Managed up to 5 projects or tasks at a given time while under pressure</li>
-                <li>Recommended and consulted with clients on the most appropriate graphic design</li>
-                <li>Created 4+ design presentations and proposals a month for clients and account managers</li>
+                <li>Artificial intelligence & Machine Learning, upflaires [August 2023]</li>
+                <li>Machine Learning & Deep Learning, upflaires[january 2024]</li>
+                <li>Advance C++, IIT Bombay [November 2022]</li>
+                <!-- <li>Created 4+ design presentations and proposals a month for clients and account managers</li> -->
               </ul>
             </div><!-- Edn Resume Item -->
 
@@ -376,14 +384,14 @@
 
           <div class="col-lg-3 col-md-6">
             <div class="stats-item text-center w-100 h-100">
-              <span data-purecounter-start="0" data-purecounter-end="521" data-purecounter-duration="0" class="purecounter">521</span>
+              <span data-purecounter-start="0" data-purecounter-end="521" data-purecounter-duration="0" class="purecounter">50</span>
               <p>Projects</p>
             </div>
           </div><!-- End Stats Item -->
 
           <div class="col-lg-3 col-md-6">
             <div class="stats-item text-center w-100 h-100">
-              <span data-purecounter-start="0" data-purecounter-end="1453" data-purecounter-duration="0" class="purecounter">1453</span>
+              <span data-purecounter-start="0" data-purecounter-end="1453" data-purecounter-duration="0" class="purecounter">150</span>
               <p>Hours Of Support</p>
             </div>
           </div><!-- End Stats Item -->
